pattern-wishcast/tests/ui/union_inside_brackets.stderr
error: Union syntax (|) is not allowed inside braces. To compose types, use: enum MyEnum = TypeA | TypeB | { variants }
  --> tests/ui/union_inside_brackets.rs:14:28
   |
14 |         IncorrectlyInsideBracket |
   |                                  ^
